--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,21 @@
   <head>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31fbd2600ab2125ae155baa46694f2a4&libraries=services,clusterer,drawing"></script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    name="description"
+    content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-196x196.png" sizes="196x196" />
+    <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon/favicon-16x16.png" sizes="16x16" />
+
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
